--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "build": "tsc"
   },
   "author": "Mrigank Krishan",
   "license": "ISC",
   "dependencies": {
     "archiver": "^1.2.0",
     "cloudcmd": "^6.4.0",
+    "connect-mongo": "^2.0.3",
     "debug": "^2.3.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
@@ -22,6 +24,7 @@
     "magnet-uri": "^5.1.5",
     "mega": "^0.2.0",
     "mime": "^1.3.4",
+    "mongoose": "^5.5.10",
     "parse-torrent": "^6.1.2",
     "pretty-bytes": "^4.0.2",
     "promise": "^7.1.1",
